# untitled-game

./: .gitignore  CMakeLists.txt  README.md
assets/gfx/: dialogue_box.aseprite  map.tmx  tile.aseprite  tiledmap_001.tsx  tilemap_001.aseprite
assets/gfx/entity/: black_cat1.aseprite  black_cat_small1.aseprite  grey_cat1.aseprite  grey_cat_small1.aseprite  monster1.aseprite  npc1.aseprite  npc2.aseprite  player.aseprite
assets/gfx/tileset/: menu_map.tmx  menu_map1.tmx  menu_tileset.tsx  player_menu_layer_map.tmx  scene1_house1_map.tmx  scene1_map.tmx  scene1_tileset.tsx  scene2_map.tmx  scene2_tileset.tmx  scene_1.aseprite  test_map.tmx  test_map2.tmx  test_tileset.tsx
assets/gfx/ui/: battle_choice_menu.aseprite  dialogue_box.aseprite  menu_selector.aseprite  menu_tileset.aseprite  menu_tileset.tsx  party_menu.aseprite  start_menu.aseprite
cmake_modules/: FindSFML.cmake
includes/: EventHandler.h  FramerateCounter.h  Game.h  LevelManager.h  ViewManager.h
includes/asset/: AssetPath.h  BaseAssetManager.h  FontManager.h  FontPath.h  TextureManager.h  TexturePath.h
includes/collisions/: Collidable.h  CollidableType.h  CollisionManager.h  CollisionPublisher.h  CollisionUtil.h  EntityCollisionEvent.h  PlayerCollisionEvent.h  PlayerVicinityCollisionEvent.h
includes/controller/: BaseController.h  ControllerActionEvent.h  ControllerMoveEvent.h  KeyboardController.h  MoveDirection.h  MoveEvent.h
includes/entity/: Animation.h  Entity.h  Player.h
includes/entity/character/: AnimatedEntity.h  CharacterEntity.h  CollidableEntity.h  EntityAnimation.h  EntityCollidable.h  EntityLogger.h  EntityMovement.h  EntityState.h  MovableEntity.h  NpcEntity.h  Player.h
includes/entity/components/: EntityAutonomousMovement.h  EntityCollidable.h  EntityLogger.h  EntityMovement.h  EntityState.h
includes/entity/level/: Level.h  TileMap.h
includes/entity/npc/: EntityAutonomousMovement.h  NpcEntity.h
includes/entity/player/: Player.h  PlayerEntity.h  PlayerManager.h
includes/events/: Event.h  EventBus.h  HandlerFunctionBase.h  MemberFunctionHandler.h
includes/events/event/: AggressiveNpcCollisionEvent.h  ChangeSceneEvent.h  ChangeSceneToBattleEvent.h  ChangeSceneToNewMapEvent.h  ChangeSceneToPreviousSceneEvent.h  CloseDialogueEvent.h  CloseMenuEvent.h  ControllerActionEvent.h  ControllerCancelEvent.h  ControllerMenuEvent.h  ControllerMenuMoveEvent.h  ControllerMoveEvent.h  EntityCollisionEvent.h  ExitGameEvent.h  NpcCollisionEvent.h  OpenDialogueEvent.h  OpenMenuEvent.h  PauseGameEvent.h  PlayerAndNpcCollisionEvent.h  PlayerCollisionEvent.h  PlayerDoorCollisionEvent.h  PlayerPositionChangeEvent.h  PlayerVicinityCollisionEvent.h  StartEntityDialogueEvent.h  UnPauseGameEvent.h
includes/level/: Level.h  LevelManager.h  ObjectMap.h  Scene.h  TileMap.cpp  TileMap.h
includes/level/collidable/: Collidable.h  CollidableType.h
includes/manager/: CollisionEvent.h  CollisionManager.h  GameManager.h  LevelManager.h  TextManager.h  ViewManager.h
includes/map/: Map.h  MapLoader.h  MenuMap.h  MenuObjectMap.h  ObjectType.h  SceneMap.h  TileMap.h
includes/npc/: NpcManager.h
includes/scene/: BattleScene.h  MenuObjectMap.h  ObjectMap.h  ObjectType.h  OverworldScene.h  PlayerManager.h  Scene.h  SceneManager.h  SceneObjectMap.h  SceneState.h  SceneStateHandler.h  TileMap.cpp  TileMap.h  ViewManager.h
includes/scene/battle/: BattleSceneDialogueEventName.h  BattleSceneMenuChoice.h  BattleState.h
includes/scene/overworld/: OverworldStartMenuChoice.h  OverworldState.h
includes/text/: CloseDialogueEvent.h  OpenDialogueEvent.h  TextManager.h
includes/text/dialogue/: DialogueEvent.h
includes/ui/: UIComponentInitializer.h  UIComponentType.h  UIManager.h  UIState.h  UIStateType.h
includes/ui/component/: MenuComponent.h  MenuLayer.h  MenuOptionComponent.h  MenuScreenPosition.h  UIComponent.h  UIComponentManager.h
includes/ui/dialogue/: Dialogue.h  DialogueEvent.h  DialogueManager.h  DialoguePiece.h  DialogueSubstitutionUtil.h  PrintableDialogueText.h
includes/ui/manager/: BattleUIManager.h  OverworldUIManager.h  UIManager.h
includes/util/: FramerateCounter.h  Logger.h  XmlManager.h
includes/view/: PlayerMoveEvent.h  ViewManager.h
lib/: libtinyxml2.7.0.1.dylib
src/: EventHandler.cpp  FramerateCounter.cpp  Game.cpp  LevelManager.cpp  ViewManager.cpp  main.cpp
src/asset/: AssetPath.cpp  BaseAssetManager.cpp  FontManager.cpp  FontPath.cpp  TextureManager.cpp  TexturePath.cpp
src/collidable/: Collidable.cpp
src/collisions/: Collidable.cpp  CollisionManager.cpp  CollisionPublisher.cpp  CollisionUtil.cpp
src/controller/: BaseController.cpp  KeyboardController.cpp
src/entity/: Animation.cpp  Entity.cpp  Player.cpp
src/entity/character/: AnimatedEntity.cpp  Animation.cpp  CharacterEntity.cpp  CollidableEntity.cpp  EntityAnimation.cpp  EntityCollidable.cpp  EntityLogger.cpp  EntityMovement.cpp  MovableEntity.cpp  NpcEntity.cpp  Player.cpp
src/entity/components/: Animation.cpp  EntityAnimation.cpp  EntityAutonomousMovement.cpp  EntityCollidable.cpp  EntityLogger.cpp  EntityMovement.cpp
src/entity/level/: Level.cpp  TileMap.cpp
src/entity/npc/: EntityAutonomousMovement.cpp  NpcEntity.cpp
src/entity/player/: Player.cpp  PlayerEntity.cpp  PlayerManager.cpp
src/events/: Event.cpp  EventBus.cpp  HandlerFunctionBase.cpp
src/level/: Level.cpp  LevelManager.cpp  ObjectMap.cpp  Scene.cpp  TileMap.cpp
src/level/collidable/: Collidable.cpp
src/manager/: CollisionManager.cpp  GameManager.cpp  LevelManager.cpp  TextManager.cpp  ViewManager.cpp
src/map/: Map.cpp  MapLoader.cpp  MenuMap.cpp  MenuObjectMap.cpp  ObjectMap.cpp  SceneMap.cpp  SceneObjectMap.cpp  TileMap.cpp
src/npc/: NpcManager.cpp
src/scene/: BattleScene.cpp  MenuObjectMap.cpp  ObjectMap.cpp  OverworldScene.cpp  PlayerManager.cpp  Scene.cpp  SceneManager.cpp  SceneObjectMap.cpp  SceneStateHandler.cpp  ViewManager.cpp
src/text/: TextManager.cpp
src/ui/: UIComponentInitializer.cpp  UIComponentType.cpp  UIManager.cpp
src/ui/dialogue/: Dialogue.cpp  (+5 more)
src/util/: FramerateCounter.cpp  Logger.cpp  XmlManager.cpp
(+35 files in other folders)
